# GAMERA

./: .gitignore  .travis.yml  CMakeLists.txt  GAMERAConfig.cmake  Makefile  README.md  astro.html  astro_header.html  astro_source.html  classes.html  genindex.html  index.html  installation.html  main_page.md  objects.inv  particles.html  particles_header.html  particles_members.html  particles_source.html  pyproject.toml  python_package.html  radiation.html  radiation_header.html  radiation_members.html  radiation_source.html  search.html  searchindex.js  tutorial.html  tutorial_MartinPWN.html  tutorial_dyn_sc_evo.html  tutorial_dyn_sc_evo_losses.html  tutorial_static_sc_evo.html  tutorial_static_sc_simple.html  use_cases.html  utils.html  utils_header.html  utils_members.html  utils_source.html
.github/workflows/: ci.yml
_sources/: classes.txt  index.txt  installation.txt  particles_header.txt  particles_members.txt  particles_source.txt  python_package.txt  radiation.txt  radiation_header.txt  radiation_members.txt  radiation_source.txt  tutorial.txt  tutorial_MartinPWN.txt  tutorial_dyn_sc_evo.txt  tutorial_dyn_sc_evo_losses.txt  tutorial_static_sc_evo.txt  utils_header.txt  utils_source.txt
autotest/: radiation_autotest.py
cpp_example/: CMakeLists.txt  example.cpp
docs/: anisotropic_IC_scattering.py  documentation.md  download_installation.md  energy_loss.md  fitting_data.md  gammagamma_absorption.md  gappa_fitter_example.py  hadronic_components.md  hadronic_emission_models.py  hadronic_models.md  inverse_compton.md  inverse_compton_temp.md  loss_times.py  main_page.md  particle_escape.md  particles_static.py  particles_static_timeseries.py  particles_time_dep.py  radiation_basics.py  radiation_modeling.md  radiation_sed_SSC.py  setup_escape_constant.py  setup_escape_energy_dependent.py  setup_escape_energy_time_dependent.py  setup_escape_time_dependent.py  time_dependent_modeling.md  time_independent_modeling.md  tutorials_main.md
docu/doxygen/: doxygenconfig.cfg  doxygenconfig.cfg~
docu/doxygen/source/: conf.py  conf.py~
docu/sphinx/: Makefile
docu/sphinx/source/: classes.rst  classes.rst~  conf.py  examples.rst~  index.rst~  installation.rst  installation.rst~  particles.rst~  particles_header.rst  particles_headers.rst~  particles_members.rst~  particles_source.rst  particles_source.rst~  python_package.rst~  radiation.rst~  radiation_header.rst  radiation_members.rst~  radiation_source.rst  tutorial.rst  tutorial.rst~  tutorial_MartinPWN.rst  tutorial_MartinPWN.rst~  tutorial_dyn_sc_evo.rst~  tutorial_dyn_sc_evo_losses.rst~  tutorial_static_sc_evo.rst~  tutorial_static_sc_simple.rst  tutorial_static_sc_simple.rst~  utils.rst  utils.rst~  utils_header.rst  utils_source.rst
docu/tutorial/: TutorialLevel1.C  TutorialLevel1Params.dat~  TutorialLevel2.py  TutorialLevel3.py  TutorialLevel4.py  TutorialLevel5.py  TutorialLevel5.py~  TutorialLevel5Params.dat~
include/: Astro.h  Particles.h  Particles.h~  Radiation.h  Utils.h  Utils.h~
include/2D_interp/: interp2d.h  interp2d_spline.h
lib/: .gitignore
licenses/: licence_GAMERA.txt
python/: CMakeLists.txt  gamerapy.i  gamerapy.i~  gappa.i  setup.py  setup.py~
src/: Astro.C  CMakeLists.txt  Particles.C  Particles.C~  Radiation.C  Utils.C
src/2D_interp/: CMakeLists.txt  bicubic.C  bilinear.C  interp2d.c  interp2d_spline.C
unit_tests/: radiation_unit_test.py
